Implement very basic literature xslt transformer