@@ -1,6 +1,6 @@
 package de.bund.digitalservice.ris.search.service.xslt;
 
-import java.util.Map;
+import java.util.Collections;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -16,8 +16,7 @@ public class LiteratureXsltTransformerService extends XsltTransformer {
     return "literature.xslt";
   }
 
-  public String transformLiterature(byte[] source, String resourcesBasePath) {
-    Map<String, String> parameters = Map.of(RESOURCE_PATH_KEY, resourcesBasePath);
-    return transformLegalDocMlFromBytes(source, parameters);
+  public String transformLiterature(byte[] source) {
+    return transformLegalDocMlFromBytes(source, Collections.emptyMap());
   }
 }
